fix popover center alignment

--- a/packages/ui/src/popover/popover.module.css
+++ b/packages/ui/src/popover/popover.module.css
@@ -56,6 +56,7 @@
     &[data-placement='center'] {
       transform-origin: center;
       margin: auto;
+      inset: 0;
       &::backdrop {
         opacity: 1;
         transition: 0.2s ease-out;
